--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,11 @@ services:
     depends_on:
       - db
       - redis
+    environment:
+      APP_URL: 'http://localhost:3000'
+      APP_SECRET: '162191bb24b34f179ad00afdee1175d672ffe139259e3c3616b6c4eba82184bb'
+      DATABASE_URL: 'postgresql://postgres:admin@db:5432/docmost?schema=public'
+      REDIS_URL: 'redis://redis:6379'
     ports:
       - "3002:3002"
     restart: unless-stopped
@@ -17,7 +22,10 @@ services:
 
   db:
     image: postgres:16-alpine
-    env_file: .env
+    environment:
+      POSTGRES_DB: docmost
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: admin
     restart: unless-stopped
     volumes:
       - db_data:/var/lib/postgresql/data
