new file:   apps/client/src/features/editor/components/bubble-menu/ContextMenu.tsx 	new file:   apps/client/src/features/editor/components/bubble-menu/SearchMenu.tsx 	modified:   apps/client/src/features/editor/components/bubble-menu/bubble-menu.tsx 	new file:   apps/client/src/features/editor/extensions/custom-paragraph.ts 	modified:   apps/client/src/features/editor/page-editor.tsx 	new file:   apps/client/src/features/editor/utils/getSelectedBlockId.ts 	modified:   apps/server/src/app.module.ts 	new file:   apps/server/src/core/casl/abilities/block-ability.factory.ts 	new file:   apps/server/src/core/casl/interfaces/block-ability.type.ts 	modified:   apps/server/src/core/casl/interfaces/page-ability.type.ts 	new file:   apps/server/src/core/page/dto/save-block-permission.dto.ts 	modified:   apps/server/src/core/page/page.controller.ts 	modified:   apps/server/src/core/page/page.module.ts 	new file:   apps/server/src/core/page/services/block-permission.service.ts 	modified:   apps/server/src/database/database.module.ts 	new file:   apps/server/src/database/repos/page/BlockMember.repo.ts 	new file:   apps/server/src/database/services/db.service.ts 	modified:   apps/server/src/database/types/db.d.ts 	modified:   apps/server/src/integrations/export/export.service.ts 	modified:   package.json 	modified:   pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@docmost/editor-ext": "workspace:*",
+    "@fastify/cors": "^11.0.1",
     "@hocuspocus/extension-redis": "^2.15.2",
     "@hocuspocus/provider": "^2.15.2",
     "@hocuspocus/server": "^2.15.2",
