--- a/apps/client/tsconfig.json
+++ b/apps/client/tsconfig.json
@@ -28,6 +28,6 @@
   },
   "include": [
     "src"
-  ],
+, "../server/src/core/page/extract-page-blocks.ts"  ],
   "references": [{ "path": "./tsconfig.node.json"}]
 }
