--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tiptap/extension-text-style": "^2.10.3",
     "@tiptap/extension-typography": "^2.10.3",
     "@tiptap/extension-underline": "^2.10.3",
+    "@tiptap/extension-unique-id": "2.0.0-beta.4",
     "@tiptap/extension-youtube": "^2.10.3",
     "@tiptap/html": "^2.10.3",
     "@tiptap/pm": "^2.10.3",
@@ -70,6 +71,7 @@
     "jszip": "^3.10.1",
     "linkifyjs": "^4.2.0",
     "marked": "^13.0.3",
+    "tiptap-unique-id": "^2.10.3",
     "uuid": "^11.1.0",
     "y-indexeddb": "^9.0.12",
     "yjs": "^13.6.20"
